<resources>
    <string name="app_name">Mele_TicTacToe</string>
    <string name="title_activity_home">Home</string>
    <string name="rules">Rules:</string>
    <string name="start">START</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="hi">hi</string>
    <string name="the_game_is_played_on_a_grid_that_s_3_squares_by_3_squares_you_are_x_your_friend_or_the_computer_in_this_case_is_o_the_first_player_to_get_3_of_their_marks_in_a_row_up_down_across_or_diagonally_is_the_winner_when_all_9_squares_are_full_the_game_ends_in_a_draw">The game is played on a grid that\'s 3 squares by 3 squares. You are X, your friend (or the computer in this case) is O. ... The first player to get 3 of their marks in a row (up, down, across, or diagonally) is the winner. When all 9 squares are full, the game ends in a draw.</string>
</resources>
